# Photon

./: .gitignore  CMakeLists.txt  main.cpp
Diagnostics/Error/: Error.h
Diagnostics/Error/Code/: lexical.h  syntax.h
Diagnostics/SourceLocation/: SourceLocation.cpp  SourceLocation.h
Diagnostics/Warning/: Warning.h  warn_type.h
LTest/: file.fn  lex_test.cpp  lex_test.h
Lexer/: Lexer.cpp  lexp.h  spec.cpp  table.h  token_t.h
Lexer/Trie_lex/: Node_lex.h  Trie_lex.cpp  Trie_lex.h
